<?xml version="1.0"?>
<package>
  <name>thormang_ctrl</name>
  <version>0.0.0</version>
  <description>The thormang_ctrl package</description>

  <maintainer email="jimin@todo.todo">jimin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vrep_common</build_depend>
  <build_depend>rt_dynamixel_msgs</build_depend>
  <build_depend>thormang_ctrl_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>vrep_common</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rt_dynamixel_msgs</run_depend>
  <run_depend>thormang_ctrl_msgs</run_depend>


  <export>


  </export>
</package>
